--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -75,13 +75,6 @@ section:first-child {
 	background-color: rgb(10, 218, 100);
 }
 
-.fa-check {
-	color: rgb(20, 192, 15);
-}
-
-.option-off {
-	color: rgb(150, 150, 150);
-}
 
 @media (min-width: 768px) {
 	.choose {
